# wsi-seg

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
configs/: MKQD63856403_001.yaml  QOFN21275156_001.yaml  default.yaml
docs/: ARCHITECTURE.md  RESULTS.md  RUNNING.md
outputs/KLMP45690052_001/20260310T141414Z_4e5e3cf_9a9d5cc8/: events.jsonl  mask.ome.tif  run.json
outputs/KLMP45690052_001/20260310T142308Z_4e5e3cf_1626960b/: events.jsonl  mask.ome.tif  run.json
outputs/MJUL22785295_001/20260310T133951Z_4e5e3cf_9a9d5cc8/: events.jsonl  mask.ome.tif  run.json
outputs/MKQD63856403_001/20260310T134049Z_4e5e3cf_9a9d5cc8/: events.jsonl  run.json
outputs/QOFN21275156_001/20260310T134312Z_4e5e3cf_9a9d5cc8/: events.jsonl  mask.ome.tif  run.json
outputs/_batches/batch_20260310T134348Z_4e5e3cf_9a9d5cc8/: summary.csv  summary.json
src/wsi_seg/: cli.py  config.py  geometry.py  logging_utils.py  model.py  pipeline.py  prefetch.py  preview.py  scheduler.py  slide.py  tissue.py  utils.py  writer.py
tests/: test_config.py  test_level_selection.py  test_pipeline_exports.py  test_pipeline_math.py  test_scheduler.py  test_slide_metadata.py  test_utils.py  test_writer.py
